// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisputeLostSeller should render correctly when completed 1`] = `
<React.Fragment>
  <PeachText>
    We've ruled in favour of the buyer in the dispute for trade tradeId
  </PeachText>
</React.Fragment>
`;

exports[`DisputeLostSeller should render correctly when not completed 1`] = `
<React.Fragment>
  <PeachText>
    We've ruled in favour of the buyer in the dispute for trade tradeId.
  </PeachText>
  <PeachText
    style={
      {
        "marginTop": 12,
      }
    }
  >
    You should release the funds to the buyer. If you don't, this will happen automatically after 30 days.
  </PeachText>
  <PeachText
    style={
      {
        "marginTop": 12,
      }
    }
  >
    You can check the chat later for more details.
  </PeachText>
</React.Fragment>
`;
